# albedo

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf  run.sh
albedo/deferred/blit/: blit.fs.glsl  blit.vs.glsl
albedo/deferred/geometry_pass/: geometry.fs.glsl  geometry.vs.glsl
albedo/deferred/postprocess/: postprocess.fs.glsl
albedo/deferred/shading/: shading.fs.glsl
demo/: CMakeLists.txt  demo.cpp
ext/include/enum_map/: enum.spec.xz  enum_map.hpp  extract.sh
include/albedo/: albedo.hpp  camera.hpp  exception.hpp  fixed_vao.hpp  material.hpp  mesh.hpp  renderer.hpp  resource.hpp  resource_defaults.hpp  resource_manager.hpp  simple_loaders.hpp  texture.hpp  utils.hpp
include/albedo/gl/: buffer.hpp  debug.hpp  fence.hpp  framebuffer.hpp  gl.hpp  gl_object.hpp  program.hpp  shader.hpp  synced_buffer.hpp  texture.hpp  uniform.hpp  vertex_array.hpp  window.hpp
src/: albedo.cpp  camera.cpp  fixed_vao.cpp  mesh.cpp  renderer.cpp  resource_defaults.cpp  simple_loaders.cpp
src/gl/: buffer.cpp  debug.cpp  framebuffer.cpp  mesh.cpp  program.cpp  shader.cpp  synced_buffer.cpp  texture.cpp  uniform.cpp  vertex_array.cpp  window.cpp
